# tvbo

./: .editorconfig  .gitignore  .nojekyll  CHANGELOG.md  CITATION.bib  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DOCKER.md  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  browser.html  docker-compose.yml  index.html  installation.html  pyproject.toml  robots.txt  search.json  sitemap.xml
.github/workflows/: ci.yml  publish-pypi.yml  release-ontology.yml
Usage/: DefineDynamicalSystem.html  DefineDynamicalSystem.qmd
Usage/_output/: pendulum_animation.html
api/: analysis.html  atlases.html  bench_against_mpr_backend.html  bids_utils.html  bifurcation.html  bifurcation_diagram.html  code.html  compgraph.html  computation_utils.html  config.html  connectomes.html  constants.html  db.html  equations.html  experiment.html  expression.html  freesurfer.html  functions.html  graph.html  index.html  integration.html  julia.html  lems_loader.html  lemsgenerator.html  literature.html  llm.html  localdynamics.html  main.html  metadata.html  misc_loader.html  modelgraph.html  network.html  networkmodel.html  nlp.html  observation.html  ontology.html  ontology_api.html  ontology_loader.html  ontology_utils.html  parcellation.html  (+16 more)
browser/: browser.js  builder.html  data.js  index.html  schema.js  styles.css
browser/reports/: Antidots.md  ArnoldCatMap.md  BetaTransformationMap.md  Chua.md  CoombesByrne.md  CoombesByrne2D.md  CoupledRoessler.md  CoupledStandardMaps3.md  DoublePendulum.md  DuffingForced.md  DumontGutkin.md  Epileptor2D.md  (+66 more)
database/: references.bib  references_from_julia.bib
datamodel/: ArgumentMapping.html  BoundaryCondition.html  BoundaryConditionType.html  BrainAtlas.html  BrainRegionSeries.html  Callable.html  Case.html  ClinicalImprovement.html  ClinicalScale.html  ClinicalScore.html  CommonCoordinateSpace.html  ConditionalBlock.html  Connectome.html  Contact.html  Coordinate.html  CostFunction.html  Coupling.html  CouplingInput.html  DBSProtocol.html  DataInjection.html  Dataset.html  DerivedParameter.html  DerivedVariable.html  DifferentialOperator.html  DiscretizationMethod.html  Distribution.html  DownsamplingModel.html  Dynamics.html  EField.html  Electrode.html  ElementType.html  EnvironmentType.html  Equation.html  FieldStateVariable.html  FittingTarget.html  Function.html  Hemisphere.qmd  ImagingModality.html  Integrator.html  Matrix.html  (+322 more)
docs/: BROWSER_SETUP.md  DOCKER_SETUP.md  ONTOLOGY_RELEASES.md  ONTOLOGY_RELEASE_SETUP.md  _authors.yml  _quarto.yml  browser.qmd  index.qmd  installation.md  styles.css
odoo-config/: odoo.conf
schema/: SANDS.yaml  tvb_dbs.yaml  tvbo_datamodel.yaml
scripts/: generate_odoo_models.py
tests/: __init__.py  _allModels_dfun.py  dev-test-simulation.qmd  dev-test.run-jax.qmd  simulating_jaxbackend.py  test_AllModels.py  test_all_backends.py  test_api.py  test_docs_notebooks.py  test_graph.py  test_jr_coupling.py  test_julia_noise.py  test_lemsgenerator.py  test_model_loading.py  test_ontology.py
tvbo/: __init__.py  logging.conf
(+719 files in other folders)
